--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "d3-time-format": "^2.2.3",
     "firebase": "^7.14.3",
     "moment": "^2.25.3",
     "react": "^16.13.1",
